[tool.poetry]
name = "checking"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fake-useragent = "^1.4.0"
bs4 = "^0.0.2"
requests = "^2.31.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
